# mod2pip

./: .ant  .flake8  .gitignore  CHANGELOG.md  CI_STATUS.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  README.rst  ci_debug.py  demo_project.py  flake8-test.md  publish.sh  pyproject.toml  requirements-dev.txt  test_compatibility.py  test_enhanced_mod2pip.py  test_lib_flag.py  test_mod2pip_features.py  tox-fixes.md  tox.ini  tox.ini.disabled
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
mod2pip/: __init__.py  env_patterns.json  mod2pip.py  pipreqs.py
pipreqs/: pipreqs.py
tests/_data_duplicated_deps/: db.py
tests/_data_ignore/: requirements.txt
