[project]
name = "mod2pip"
version = "0.5.0"
description = "Pip requirements.txt generator based on imports in project"
authors = [
    { name = "Raja CSP Raman", email = "raja.csp@gmail.com" }
]
maintainers = [
    {name = "Jonas Eschle", email = "jonas.eschle@gmail.com"}
]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/kactlabs/mod2pip"
keywords = ["pip", "requirements", "imports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9, <3.14"
dependencies = [
    "yarg>=0.1.9",
    "docopt>=0.6.2",
    "nbconvert>=7.11.0",
    "ipython>=8.12.3",
]

[project.scripts]
mod2pip = "mod2pip.mod2pip:main"

[project.optional-dependencies]
dev = [
    "flake8>=6.1.0",
    "tox>=4.11.3",
    "coverage>=7.3.2",
    "sphinx>=7.2.6;python_version>='3.9'",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
